# rst-in-md

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: checks.yml  docs.yml  publish.yml
docs/: index.md  test.md
docs/explanations/: implementation.md  limitations.md  motivation.md
docs/guides/: general_usage.md  inline_ignore.md  installation.md  integrations.md
docs/reference/: conversion.md  extension.md  superfence.md
explanations/implementation/: index.html
explanations/limitations/: index.html
explanations/motivation/: index.html
guides/general_usage/: index.html
guides/inline_ignore/: index.html
guides/installation/: index.html
guides/integrations/: index.html
reference/conversion/: index.html
reference/extension/: index.html
reference/superfence/: index.html
rst_in_md/: __init__.py  conversion.py  extension.py  processor.py  superfence.py
search/: search_index.json
tests/: conftest.py  test_conversion.py  test_processor.py
tests/compatibility/: test_markdown.py  test_superfences.py
tests/compatibility/rst/: test_tables.py
